[tool.poetry]
name = "src"
version = "0.1.0"
description = "Modulo para swappear caras de imagenes"
authors = ["RArielAlonso <rariel.alonso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
insightface = "^0.7.3"
jupyter = "^1.0.0"
onnxruntime = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
